--- a/.github/workflows/sentiment.yml
+++ b/.github/workflows/sentiment.yml
@@ -2,7 +2,7 @@ name: Sentiment Pipeline
 
 on:
   schedule:
-    - cron: "0 * * * *"   # 매시 정각 (UTC 기준, 하루 24번 실행)
+    - cron: "0 15-23,0-14 * * *"  # korean time
   workflow_dispatch:      # 수동 실행 버튼
 
 jobs:
