--- a/.github/workflows/sentiment.yml
+++ b/.github/workflows/sentiment.yml
@@ -2,7 +2,7 @@ name: Sentiment Pipeline
 
 on:
   schedule:
-    - cron: "0 15-23,0-14 * * *"  # korean time
+    - cron: "0 */3 * * *"  # every 3 hours
   workflow_dispatch:      # 수동 실행 버튼
 
 jobs:
