--- a/.github/workflows/sentiment.yml
+++ b/.github/workflows/sentiment.yml
@@ -2,7 +2,7 @@ name: Sentiment Pipeline
 
 on:
   schedule:
-    - cron: "0 */6 * * *"  # every 3 hours
+    - cron: "0 */12 * * *"  # every 12 hours utc
   workflow_dispatch:      # 수동 실행 버튼
 
 jobs:
