--- a/.github/workflows/sentiment.yml
+++ b/.github/workflows/sentiment.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: SaveModel/
-          key: ${{ runner.os }}-sentiment-model-v1
+          key: ${{ runner.os }}-sentiment-model-v2 # 모델 v2
           restore-keys: |
             ${{ runner.os }}-sentiment-model-
 
